--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,10 +8,10 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     
-    - name: databricks-import-directory
-    - uses: microsoft/databricks-import-directory@1
-      with:
-        databricks-host: https://adb-2466824116276953.13.azuredatabricks.net
-        databricks-token: dapic0ad793e62f534c98a44957f0708a304-2
-        local-path: ./rajesh
-        remote-path: /Folder
+#     - name: databricks-import-directory
+#     - uses: microsoft/databricks-import-directory@1
+#       with:
+#         databricks-host: https://adb-2466824116276953.13.azuredatabricks.net
+#         databricks-token: dapic0ad793e62f534c98a44957f0708a304-2
+#         local-path: ./rajesh
+#         remote-path: /Folder
