--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,8 +4,8 @@ on:
   workflow_dispatch:
 jobs:
   build:
-#     runs-on: [self-hosted, Windows, X64]
-    runs-on: windows-latest
+    runs-on: self-hosted
+#     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v1
     
