--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,9 @@ jobs:
     runs-on: [self-hosted, Windows]
     steps:
     - name: Check out repository
+      with:
+        repository: TeamKagoolLtd/azuredatabricks-github
+        ref: v1.0
       uses: actions/checkout@v3
     - name: Install Databricks cli
       uses: microsoft/install-databricks-cli@v1.0.0
