--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
       uses: actions/checkout@v3
     - name: Install Databricks cli
       uses: microsoft/install-databricks-cli@v1.0.0
-    - uses: microsoft/databricks-import-directory@v1.0.0
+    - uses: ./
       with:
         databricks-host: https://adb-2466824116276953.13.azuredatabricks.net
         databricks-token: dapic0ad793e62f534c98a44957f0708a304-2
