--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,3 +17,11 @@ jobs:
         
     - name: check out repo
       uses: actions/checkout@v2
+    
+    - name: Import Databricks notebooks    
+      uses: ./
+      with:
+        databricks-host: https://adb-2466824116276953.13.azuredatabricks.net
+        databricks-token: dapic0ad793e62f534c98a44957f0708a304-2
+        local-path: ./rajesh
+        remote-path: /Folder
