--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
       uses: actions/checkout@v2
     
     - name: Import Databricks notebooks    
-      uses: ./
+      uses: microsoft/databricks-import-notebook@v1.0.0
       with:
         databricks-host: https://adb-2466824116276953.13.azuredatabricks.net
         databricks-token: dapic0ad793e62f534c98a44957f0708a304-2
