--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
 jobs:
   build:
-    runs-on: [self-hosted, windows]
+    runs-on: windows-latest
     steps:
     - name: Check out repository
       uses: actions/checkout@v2
