--- a/.github/workflows/main01.yml
+++ b/.github/workflows/main01.yml
@@ -10,9 +10,7 @@ jobs:
     - name: Check out repository
       uses: actions/checkout@v2
       
-    - name: Download & Extract
-      uses: gamedev-thingy/Download-Extract@done
-     with:
-        url:./source 
-        destination:./source 
-        ZIPname:./source/source
+    - name: Just Extract
+      uses: brunoborges/justextract@v1
+      with:
+        file: ./source/velocity_module.zip
