--- a/.github/workflows/main01.yml
+++ b/.github/workflows/main01.yml
@@ -13,4 +13,4 @@ jobs:
     - name: Just Extract
       uses: brunoborges/justextract@v1
       with:
-        file: ./source/velocity_modules.zip
+        file: /source/velocity_modules.zip
