--- a/.github/workflows/main01.yml
+++ b/.github/workflows/main01.yml
@@ -14,3 +14,4 @@ jobs:
       uses: brunoborges/justextract@v1
       with:
         file: /source/velocity_modules.zip
+        File Extension: zip
