--- a/.github/workflows/main01.yml
+++ b/.github/workflows/main01.yml
@@ -1,7 +1,7 @@
 name: Databricks_so_file_Deployment
 on:
   push:
-    branches: main
+    branches: sofilebranch
   workflow_dispatch:
 jobs:
   build:
