--- a/.github/workflows/main01.yml
+++ b/.github/workflows/main01.yml
@@ -15,8 +15,17 @@ jobs:
       
     - uses: actions/checkout@v2
     - run: mkdir -p source/artifact
-  #  - run: echo hello > source/kdp_databricks.cpython-38-x86_64-linux-gnu.so
+    - run: echo hello > source/kdp_databricks.cpython-38-x86_64-linux-gnu.so
     - uses: actions/upload-artifact@v3
       with:
         name: my-artifact
         path: source/kdp_databricks.cpython-38-x86_64-linux-gnu.so
+        
+    - name: Run Pre-deployment scripts
+      shell: powershell
+      run: mkdir "WebApp_Source"
+      
+    - name: Run Script
+      shell: powershell
+      run: |
+        ./scripts/databricks.cicd.tools.ps1
