--- a/.github/workflows/main01.yml
+++ b/.github/workflows/main01.yml
@@ -5,7 +5,7 @@ on:
   workflow_dispatch:
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, Windows, X64]
     steps:
     - name: Check out repository
       uses: actions/checkout@v2
