--- a/.github/workflows/main01.yml
+++ b/.github/workflows/main01.yml
@@ -11,7 +11,7 @@ jobs:
       uses: actions/checkout@v2
       
     - name: unzip artifact for deployment
-      run: unzip velocity_modules.zip
+      run: Expand-Archive velocity_modules.zip
       
     - uses: actions/checkout@v2
     - run: mkdir -p source/artifact
